--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="start-up">start-up</a></li>
 						<li><a href="#" data-nav-section="Publications">Publications</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="services">Projects</a></li>
@@ -130,6 +131,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			  	</div>
 			</section>
 
+
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -192,6 +194,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			</section>
 
 
+			<section class = "colorlib-start-up" data-section = "start-up">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+								<div class="col-md-12">
+									<div class="about-desc">
+										<span class="heading-meta">Face Recognition based Attendance System</span>
+										<h2 class="colorlib-heading">About the Project</h2>
+										<p>The technology we are aiming to develop is the face-based biometric attendance device. We have been working on this project for the past few months. The device will detect the face of the person standing in front of the camera and will mark their attendance if the ID matches in the system. To save from face spoofing, a spoof prevention algorithm is being implemented which will detect whether the person standing is live or is showing someone else's photograph or video and will reject these cases not permitting the person to mark the attendance. The technology has been developed in the Python programming environment because of the ease of integration with the hardware. The current status of the project is where the program has been built and functionally tested on a few test cases. We are currently focussing on hardware development and scalability.</p>
+										<p> The video link for the same can be accessed by clicking the below link. </p>
+										<p><a href = "Face_Rec_attendance_demo.mp4" class="btn btn-primary btn-learn">View video <i class="icon-download4"></i></a></p>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			
 			
 			
